# addressr-python

./: LICENSE  README.md  pyproject.toml
addressr_client/: __init__.py  client.py
addressr_client/api/: addresses.py
addressr_client/schemas/: get_address.py  search_addresses.py
tests/: test_client.py
